--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/widget/telephone.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/widget/telephone.phtml
@@ -8,7 +8,7 @@ use Magento\Framework\Escaper;
 /** @var Telephone $block */
 ?>
 
-<div>
+<div class="field field-reserved">
     <label for="telephone" class="sr-only tracking-widest">
         <span><?= $escaper->escapeHtml(__('Phone Number')) ?></span>
     </label>
