--- a/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/reorder/sidebar.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/reorder/sidebar.phtml
@@ -1,10 +1,4 @@
 <?php
-/**
- * Hyvä Themes - https://hyva.io
- * Copyright © Hyvä Themes 2020-present. All rights reserved.
- * This product is licensed per Magento install
- * See https://hyva.io/license
- */
 
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\Customer;
@@ -93,18 +87,18 @@ if (! $customer->customerLoggedIn()) {
 
 <div x-data="initReorderSidebar()"
      @private-content-loaded.window="receiveReorderData($event.detail.data)"
-     class="block-reorder mt-8 hidden"
+     class="block-reorder hidden bg-white py-3 rounded-xl"
      :class="{ 'hidden': !itemCount }"
      :aria-hidden="!itemCount"
 >
-    <h2 class="border-t border-container mb-6 pt-5">
+    <h2 class="border-b border-container md:px-3 pb-3">
         <strong id="block-reorder-heading"
-                class="block title text-primary font-semibold text-lg"
+                class="block title text-primary font-bold text-lg"
         >
             <?= $escaper->escapeHtml(__('Recently Ordered')) ?>
         </strong>
     </h2>
-    <div class="block-content">
+    <div class="block-content md:px-6 mt-3">
         <form method="post"
               class="form reorder"
               action="<?= $escaper->escapeUrl($block->getFormActionUrl()) ?>"
@@ -118,7 +112,7 @@ if (! $customer->customerLoggedIn()) {
                 <div>
                     <ol id="cart-sidebar-reorder" class="product-items product-items-names">
                         <template x-for="product in reorderItems">
-                            <li class="flex items-start mb-4">
+                            <li class="flex items-start gap-2 mb-4">
                                 <div class="shrink-0 mr-2">
                                     <div class="control">
                                         <input type="checkbox"
@@ -130,10 +124,11 @@ if (! $customer->customerLoggedIn()) {
                                                    : hyva.str('<?= $escaper->escapeJs(__('Product "%1" is not salable')) ?>', product.name)
                                                "
                                                :disabled="!product.is_saleable"
+                                               class="w-5 h-5 rounded-full border-2 border-blue-600"
                                         />
                                     </div>
                                 </div>
-                                <strong class="text-sm leading-6 font-normal hover:underline">
+                                <strong class="text-sm leading-6 text-text-700 font-normal hover:underline">
                                     <a
                                         :href="product.url"
                                         :title="product.name"
@@ -145,12 +140,12 @@ if (! $customer->customerLoggedIn()) {
                         </template>
                     </ol>
                     <div id="cart-sidebar-reorder-advice-container"></div>
-                    <div class="flex flex-wrap gap-y-2 items-center md:mt-5 text-sm">
+                    <div class="flex flex-wrap flex-col md:flex-row gap-y-[1.375rem]  gap-x-3 items-center md:mt-5">
                         <template x-if="isShowAddToCart">
                             <button
                                 type="button"
                                 @click.prevent="addToCart('<?= $escaper->escapeUrl($block->getFormActionUrl()) ?>')"
-                                class="action tocart btn btn-primary text-sm"
+                                class="w-full md:w-auto bg-primary-500 py-[0.625rem] px-[1.125rem] secondary rounded-lg text-white"
                                 aria-label="<?= $escaper->escapeHtmlAttr(__('Add to cart selected products from list')) ?>"
                                 data-addto="cart"
                             >
@@ -158,7 +153,7 @@ if (! $customer->customerLoggedIn()) {
                             </button>
                         </template>
                         <a href="<?= $escaper->escapeUrl($block->getUrl('customer/account')) ?>#recentOrders"
-                           class="px-4 text-sm text-gray-500 hover:text-primary"
+                           class="px-4 text-primary-500"
                            aria-label="<?= $escaper->escapeHtmlAttr(__('View all recent orders')) ?>"
                         >
                             <?= $escaper->escapeHtml(__('View All')); ?>
