--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/edit.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/edit.phtml
@@ -27,7 +27,7 @@ $regionLabel = $block->getAttributeData()->getFrontendLabel('region');
 $showOptionalRegions = $block->getConfig('general/region/display_all');
 ?>
 
-<div>
+<div x-data="Dropdown()">
     <h2 class="text-text-500 text-lg font-bold mb-5">
         <?= $escaper->escapeHtml(__('Customer Address')) ?>
     </h2>
@@ -327,7 +327,11 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
                     title="<?= $escaper->escapeHtmlAttr(__('Save Address')) ?>">
                 <span><?= $escaper->escapeHtml(__('Save Address')) ?></span>
             </button>
-            <a class="button button--ghost-primary" href="<?= $escaper->escapeUrl($block->getBackUrl()) ?>">
+            <a
+                class="button button--ghost-primary"
+                href="<?= $escaper->escapeUrl($block->getBackUrl()) ?>"
+                @click.prevent="fetchAndReplaceContent('<?= $escaper->escapeUrl($block->getBackUrl()) ?>')"
+            >
                 <span><?= $escaper->escapeHtml(__('Go back')) ?></span>
             </a>
         </div>
