--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/edit.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/edit.phtml
@@ -27,12 +27,12 @@ $regionLabel = $block->getAttributeData()->getFrontendLabel('region');
 $showOptionalRegions = $block->getConfig('general/region/display_all');
 ?>
 
-<div x-data="Dropdown()">
+<div x-data="Address()">
     <h2 class="text-text-500 text-lg font-bold mb-5">
         <?= $escaper->escapeHtml(__('Customer Address')) ?>
     </h2>
     <form
-        x-data="Object.assign(initCustomerAddressEdit(), hyva.formValidation($root))"
+        x-data="initCustomerAddressEdit()"
         @private-content-loaded.window="onPrivateContentLoaded($event.detail.data)"
         @submit="onSubmit"
         action="<?= $escaper->escapeUrl($block->getSaveUrl()) ?>"
@@ -273,15 +273,6 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
 
             <?= $block->getChildHtml('fieldset_address_info_additional') ?>
 
-            <?php $isDefaultMessages = array_filter([
-                $block->isDefaultBilling() ? __("It's a default billing address.") : null,
-                $block->isDefaultShipping() ? __("It's a default shipping address.") : null,
-            ]) ?>
-            <?php if ($isDefaultMessages): ?>
-                <div class="message">
-                    <?= $escaper->escapeHtml(implode("<br>\n", $isDefaultMessages), ['br']) ?>
-                </div>
-            <?php endif; ?>
             <?php if (!$block->isDefaultBilling() && $block->canSetAsDefaultBilling()): ?>
                 <label class="flex items-center gap-x-3 mt-5 mb-3 mx-4" for="primary_billing">
                     <input
@@ -302,7 +293,7 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
             <?php endif; ?>
 
             <?php if (!$block->isDefaultShipping() && $block->canSetAsDefaultShipping()): ?>
-                <label class="flex items-center gap-x-3 mx-4" for="primary_shipping">
+                <label class="flex items-center gap-x-3 mt-5 mb-3 mx-4" for="primary_shipping">
                     <input
                         type="checkbox"
                         class="checkbox__input"
@@ -336,100 +327,97 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
             </a>
         </div>
     </form>
-
 </div>
 
 <script>
-    function initCustomerAddressEdit() {
-        return {
-            directoryData: {},
-            availableRegions: {},
-            messageTime: 5000,
-            fieldsNames: [],
-            selectedRegion: '<?= $escaper->escapeJs($block->getRegion() ?: 0) ?>',
-            isZipRequired: true,
-            isRegionRequired: true,
-            showOptionalRegions: <?= $showOptionalRegions ? 'true' : 'false' ?>,
-            onPrivateContentLoaded(data) {
-                this.directoryData = data['directory-data'] || {};
+    document.addEventListener('DOMContentLoaded', function () {
+        window.initCustomerAddressEdit = function () {
+            return {
+                directoryData: {},
+                availableRegions: {},
+                messageTime: 5000,
+                fieldsNames: [],
+                selectedRegion: '<?= $escaper->escapeJs($block->getRegion() ?: 0) ?>',
+                isZipRequired: true,
+                isRegionRequired: true,
+                showOptionalRegions: <?= $showOptionalRegions ? 'true' : 'false' ?>,
+                onPrivateContentLoaded(data) {
+                    this.directoryData = data['directory-data'] || {};
 
-                <?php if ($block->getCountryId()): ?>
-                this.setCountry(this.$refs['country_id'], '<?= $escaper->escapeJs($block->getRegion()) ?>');
-                <?php endif; ?>
+                    <?php if ($block->getCountryId()): ?>
+                    this.setCountry(this.$refs['country_id'], '<?= $escaper->escapeJs($block->getRegion()) ?>');
+                    <?php endif; ?>
 
-            },
-            setRegionInputValue(regionName) {
-                this.$nextTick(() => {
-                    const regionInputElement = this.$refs['region'];
-                    if (regionInputElement) {
-                        regionInputElement.value = regionName;
+                },
+                setRegionInputValue(regionName) {
+                    this.$nextTick(() => {
+                        const regionInputElement = this.$refs['region'];
+                        if (regionInputElement) {
+                            regionInputElement.value = regionName;
+                        }
+                    })
+                },
+                setCountry(countrySelectElement, initialRegion) {
+                    const selectedOption = countrySelectElement.options[countrySelectElement.selectedIndex];
+                    const countryCode = countrySelectElement.value;
+                    const countryData = this.directoryData[countryCode] || false;
+
+                    if (!countryData) {
+                        this.setRegionInputValue('');
+                        return;
                     }
-                })
-            },
-            setCountry(countrySelectElement, initialRegion) {
-                const selectedOption = countrySelectElement.options[countrySelectElement.selectedIndex];
-                const countryCode = countrySelectElement.value;
-                const countryData = this.directoryData[countryCode] || false;
 
-                if (!countryData) {
-                    this.setRegionInputValue('');
-                    return;
+                    this.isZipRequired = selectedOption.dataset.isZipRequired === '1';
+                    this.isRegionRequired = selectedOption.dataset.isRegionRequired === '1';
+
+                    this.availableRegions = countryData.regions || {};
+
+                    const initialRegionId = Object.keys(this.availableRegions).filter(regionId => this.availableRegions[regionId].name === initialRegion)[0];
+                    this.selectedRegion = initialRegionId || '0';
+                    this.setRegionInputValue(initialRegionId && this.availableRegions[initialRegionId].name || '');
+
+                },
+                changeCountry(event, initialRegion) {
+                    this.setCountry(event.target, initialRegion);
+                    this.validateCountryDependentFields();
+                    this.onChange(event);
+                },
+                validateCountryDependentFields() {
+                    this.$nextTick(() => {
+                        <?php /* Reinitialize validation rules for fields that depend on the country */ ?>
+                        this.fields['postcode'] && this.removeMessages(this.fields['postcode'])
+                        this.fields['region'] && this.removeMessages(this.fields['region'])
+                        delete this.fields['postcode'];
+                        delete this.fields['region'];
+                        <?php /* Initialize country_id, too, because the postcode validation depends on it */ ?>
+                        this.setupField(this.$refs['country_id']);
+                        this.setupField(this.$refs['postcode']);
+                        this.setupField(this.$refs['region']);
+                        this.setupField(this.$refs['region_id']);
+
+                        this.fields['postcode'] && this.validateField(this.fields['postcode']);
+                        this.fields['region'] && this.validateField(this.fields['region']);
+                        this.fields['region_id'] && this.validateField(this.fields['region_id']);
+                    })
+                },
+                hasAvailableRegions() {
+                    return Object.keys(this.availableRegions).length > 0;
+                },
+                onRegionIdChange(event) {
+                    this.$refs.region.value = this.selectedRegion.length > 0 ?
+                        this.availableRegions[this.selectedRegion].name :
+                        ''
+                    this.onChange(event)
+                    this.validateField(this.fields['region'])
                 }
-
-                this.isZipRequired = selectedOption.dataset.isZipRequired === '1';
-                this.isRegionRequired = selectedOption.dataset.isRegionRequired === '1';
-
-                this.availableRegions = countryData.regions || {};
-
-                const initialRegionId = Object.keys(this.availableRegions).filter(regionId => this.availableRegions[regionId].name === initialRegion)[0];
-                this.selectedRegion = initialRegionId || '0';
-                this.setRegionInputValue(initialRegionId && this.availableRegions[initialRegionId].name || '');
-
-            },
-            changeCountry(event, initialRegion) {
-                this.setCountry(event.target, initialRegion);
-                this.validateCountryDependentFields();
-                this.onChange(event);
-            },
-            validateCountryDependentFields() {
-                this.$nextTick(() => {
-                    <?php /* Reinitialize validation rules for fields that depend on the country */ ?>
-                    this.fields['postcode'] && this.removeMessages(this.fields['postcode'])
-                    this.fields['region'] && this.removeMessages(this.fields['region'])
-                    delete this.fields['postcode'];
-                    delete this.fields['region'];
-                    <?php /* Initialize country_id, too, because the postcode validation depends on it */ ?>
-                    this.setupField(this.$refs['country_id']);
-                    this.setupField(this.$refs['postcode']);
-                    this.setupField(this.$refs['region']);
-                    this.setupField(this.$refs['region_id']);
-
-                    this.fields['postcode'] && this.validateField(this.fields['postcode']);
-                    this.fields['region'] && this.validateField(this.fields['region']);
-                    this.fields['region_id'] && this.validateField(this.fields['region_id']);
-                })
-            },
-            hasAvailableRegions() {
-                return Object.keys(this.availableRegions).length > 0;
-            },
-            onRegionIdChange(event) {
-                this.$refs.region.value = this.selectedRegion.length > 0 ?
-                    this.availableRegions[this.selectedRegion].name :
-                    ''
-                this.onChange(event)
-                this.validateField(this.fields['region'])
             }
-        }
-    }
-
-    window.addEventListener('DOMContentLoaded', () => {
+        };
 
         hyva.formValidation.addRule('telephone', (value, options) => {
             const phoneNumber = value.trim().replace(' ', '');
             if (phoneNumber && phoneNumber.length < (options.minlength || 3)) {
                 return '<?= $escaper->escapeJs(__('The telephone number is too short.')) ?>';
             }
-
             return true;
         });
 
@@ -454,8 +442,7 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
                     '<?= $escaper->escapeJs(__('If you believe it is the right one you can ignore this notice.')) ?>'
                 ]);
             }
-
             return true;
         });
-    })
+    });
 </script>
