--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/account/link/back.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/account/link/back.phtml
@@ -5,5 +5,5 @@
  */
 ?>
 <div class="">
-    <div><a class="bg-primary-500 py-[0.625rem] px-[1.125rem] secondary rounded-lg text-white" href="<?= $block->escapeUrl($block->getBackUrl()) ?>"><span><?= $block->escapeHtml(__('Go back')) ?></span></a></div>
+    <div><a class="bg-primary-500 py-2.5 px-5 secondary rounded-lg text-white" href="<?= $block->escapeUrl($block->getBackUrl()) ?>"><span><?= $block->escapeHtml(__('Go back')) ?></span></a></div>
 </div>
