--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/guarantees/_guarantees.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/guarantees/_guarantees.style.less
@@ -1,5 +1,8 @@
 .empty-guarantees {
-  min-height: 150px;
+  padding: 50px 0;
+  text-align: center;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 .guarantees {
