--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/book.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/book.phtml
@@ -10,7 +10,7 @@ use Magento\Framework\Escaper;
 /** @var ViewModelRegistry $viewModels */
 ?>
 
-<div class="mb-8" x-data="Address()">
+<section class="mb-8" x-data="Address()">
     <h2 class="text-text-500 text-lg font-bold mb-5">
         <?= $escaper->escapeHtml(__('Default Addresses')) ?>
     </h2>
@@ -77,4 +77,4 @@ use Magento\Framework\Escaper;
             </div>
         <?php endif ?>
     </div>
-</div>
+</section>
